Finished User by List Resource
